@@ -36,6 +36,7 @@ New features:
 - 3469777: Scored snippets
 
 Bug fixes:
+- 3521414: File not parsed in database crawler
 - 3516114: NPE with Web Crawler when no unique field is set
 - 3500288: Wrong facet count when using optimized collapsing
 - 3498607: NPE when collapsing is enable with no documents found
